# InsightGrid

./: README.md
backend/: .env.example  pyproject.toml  requirements.txt  run.ps1
backend/app/: main.py
backend/app/api/: main.py
backend/app/api/endpoints/: __init__.py  auth.py
backend/app/api/endpoints/post/: create_post.py  main.py
backend/app/core/: __init__.py  config.py  lifespan.py  security.py
backend/app/db/: __init__.py  mysql.py
backend/app/db/redis/: __init__.py  main.py
backend/app/db/redis/model/: __init__.py  user.py
backend/app/db/redis/utils/: __init__.py  is_revoked.py
backend/app/schema/: __init__.py  jwt_token.py
